fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ main .container .owl-nav .owl-nav-prev,main .container .owl-nav .owl-nav-next:{
     main .site-title .site-background h1{
         color: #364541;
         font-size: 1.5rem !important;
-        transform: translate(31rem, 10rem);
+        transform: translate(30rem, 11rem);
     }
     
     main .site-title  h2 {
